# Incredible.dev

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.rust  README.md  docker-compose.yml
Dockerfiles/: Dockerfile.base  Dockerfile.code-search  Dockerfile.code-understanding  Dockerfile.coordinator  Dockerfile.ingestion
agents/: .env  Cargo.toml  build.rs  output.txt
agents/src/: config.rs  controller.rs  db_client.rs  main.rs  routes.rs  utils.rs
agents/src/agent/: agent.rs  exchange.rs  llm_gateway.rs  mod.rs  prompts.rs  transform.rs
agents/src/agent/graph/: mod.rs  nodes.rs  scope_graph.rs  symbol.rs
agents/src/agent/tools/: answer.rs  code.rs  path.rs  proc.rs
agents/src/helpers/: case_permutations.rs  mod.rs  symbol_search.rs  trigrams.rs
agents/src/parser/: languages.rs  mod.rs  parser.rs
agents/src/question_generator/: mod.rs  question_generator.rs
agents/src/search/: mod.rs  payload.rs  ranking.rs  schema.rs  search.rs  semantic.rs
ai-gateway/: Cargo.toml  config_files.rs  lib.rs
ai-gateway/client/: azure_openai.rs  common.rs  gemini.rs  mistral.rs  model.rs  moonshot.rs  openai_compatible.rs  qianwen.rs
ai-gateway/render/: mod.rs  stream.rs
ai-gateway/src/: config.rs  function_calling.rs  input.rs  role.rs
ai-gateway/src/client/: azure_openai.rs  claude.rs  common.rs  ernie.rs  gemini.rs  message.rs  mistral.rs  model.rs  moonshot.rs  ollama.rs  openai.rs  openai_compatible.rs  qianwen.rs  vertexai.rs
ai-gateway/src/message/: message.rs
ai-gateway/src/render/: mod.rs
ai-gateway/src/session/: session.rs
code-navigator/: Cargo.toml
code-navigator/src/: main.rs  tester.rs
code-search/: .env  .env.docker  .env.production  .gitignore  Cargo.toml  Dockerfile  Readme.md  entrypoint.sh
code-search/src/: code_navigation.rs  config.rs  db.rs  main.rs  models.rs  routes.rs  snippet.rs
code-search/src/controller/: mod.rs  navigator.rs  parentscope.rs  span.rs  symbol.rs
code-search/src/graph/: graph_code_pluck.rs  scope_graph.rs  symbol_ops.rs
code-search/src/parser/: mod.rs
code-search/src/search/: code_search.rs  mod.rs  payload.rs  quikwit.rs  (+2 more)
code-understanding/: .env  .env.development  .env.docker  .gitignore  Cargo.toml  build.rs
code-understanding/src/: config.rs  controller.rs  db_client.rs  main.rs  routes.rs
common/: Cargo.toml  example-config.yaml
common/src/: ai_util.rs  ast.rs  config.rs  docker.rs  hasher.rs  lib.rs  llm_gateway.rs  models.rs  prompts.rs  service_interaction.rs  tokenizer_onnx.rs
common/src/ai_gateway/: config.rs  config_files.rs  input.rs  mod.rs  render.rs  role.rs  session.rs  utils.rs
common/src/ai_gateway/client/: claude.rs  common.rs  ernie.rs  example-config.yaml  message.rs  ollama.rs  openai.rs  qianwen.rs  vertexai.rs
common/src/ai_gateway/message/: message.rs
common/src/ai_gateway/render/: mod.rs
common/src/ai_gateway/session/: session.rs  session_state.rs
common/src/ast/: ast_graph.rs  debug.rs  graph_code_pluck.rs  import.rs  reference.rs  symbol.rs  utils.rs
common/src/ast/language_support/: test_utils.rs
common/src/ast/language_support/c/: mod.rs
common/src/ast/language_support/go/: mod.rs
common/src/ast/language_support/javascript/: mod.rs
common/src/ast/language_support/python/: mod.rs
common/src/ast/language_support/r/: mod.rs
common/src/ast/language_support/typescript/: mod.rs
common/src/task_graph/: add_node.rs  answers.rs  graph_model.rs  mod.rs  ops.rs  redis.rs  redis_config.rs  state.rs
context-generator/: Cargo.toml
context-generator/src/: config.rs  controller.rs  db_client.rs  main.rs  routes.rs
coordinator/: .env  .env.docker  Cargo.toml  generated_questions.json
coordinator/sample_generated_data/dataset_1/: answers_to_questions.json  generated_questions.json  query.json
coordinator/src/: code_understanding.rs  configuration.rs  main.rs  models.rs  routes.rs  utility.rs
coordinator/src/controller/: error.rs  mod.rs  suggest.rs
coordinator/src/llm_ops/: mod.rs  summarize.rs  tasks_questions.rs
coordinator/src/task_graph/: add_node.rs  answers.rs  graph_model.rs  mod.rs  ops.rs  read_file_data.rs  redis.rs  state.rs
ingestion/: .env  .env.docker  .gitignore  Cargo.toml  Dockerfile.rs  Dockerfile.rust  Readme.md  docker-compose.yml  entrypoint.sh  env.docker  index-config.yaml
ingestion/scripts/: scp-from-aws.sh  scp-to-aws.sh  scripts.code-workspace
ingestion/src/: ast.rs  cli.rs  config.rs  generate_index_schema.rs  hash.rs  index_filter.rs  index_processor.rs  lib.rs  main.rs  qdrant-test.proto  semantic_index.rs  state.rs  util.rs
ingestion/src/ast/: ast_graph.rs  def.rs  language_support.rs  scope.rs  symbol.rs
ingestion/src/ast/language_support/: test_utils.rs
ingestion/src/ast/language_support/c/: mod.rs
ingestion/src/ast/language_support/c_sharp/: mod.rs
ingestion/src/ast/language_support/cpp/: mod.rs
ingestion/src/ast/language_support/java/: mod.rs
ingestion/src/ast/language_support/javascript/: mod.rs
ingestion/src/ast/language_support/php/: mod.rs
ingestion/src/ast/language_support/ruby/: mod.rs
ingestion/src/ast/language_support/rust/: mod.rs
ingestion/src/ast/language_support/typescript/: mod.rs
ingestion/src/semantic_index/: chunking.rs  vector_payload.rs
ingestion/src/server/: controller.rs  mod.rs  models.rs  routes.rs
ingestion/src/stack_graph/: graph.rs
modifier/: .env  Cargo.toml
modifier/src/: main.rs  models.rs  routes.rs
search/: .env.development  .env.sample.docker  .env.sample.local  Cargo.toml  Dockerfile
search/.github/workflows/: k8s-deployment.yaml
search/deployment/: dev.yml  prod.yml
search/src/: controller.rs  db.rs  main.rs  models.rs  routes.rs
search/src/controller/: mod.rs  parentscope.rs  span.rs  symbol.rs
search/src/graph/: graph_code_pluck.rs  mod.rs  nodes.rs  scope_graph.rs
search/src/parser/: literal.rs
search/src/search/: code_search.rs  quikwit.rs  semantic.rs
search/src/utilities/: util.rs
vscode-extension/: package-lock.json  package.json  webpack.config.views.js
vscode-extension/src/: dummy.ts  extension.ts  registerView.ts
(+56 files in other folders)
