[package]
name = "agents"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.1"
regex-syntax = "0.7.3"
# query parsing
pest = "2.7.0"
pest_derive = "2.7.0"
smallvec = { version = "1.11.0", features = ["serde"]}
serde = {version = "1.0.166", features = ["derive"]}
anyhow = "1.0.71"
thiserror = "1.0.41"
pretty_assertions = "1.3.0"
serde_json = "1.0.100"
serde_yaml = "0.9.22"
phf = "0.11.1"
uuid = { version = "1.4.0", features = ["v4", "fast-rng", "serde"] }
tracing = "0.1.37"
quick-xml = "0.30.0"
tiktoken-rs = "0.4.5"
comrak = { default-features = false, git = "https://github.com/kivikakk/comrak" }
lazy-regex = "3.0.0"
futures = "0.3.28"
rand = "0.8.5"
axum = { version = "0.6.18", features = ["http2", "headers"] }
axum-extra = { version = "0.7.4", features = ["cookie", "cookie-private"] }
tower = "0.4.13"
chrono = { version = "0.4.26", features = ["serde", "std"], default-features = true }
compact_str = "0.7.1"
hashbrown = "0.14.1"
petgraph = { version = "0.6.3", default-features = false, features = ["serde-1"] }
tree-sitter = "0.20.10"
expect-test = "1.4.1"
bincode = "1.3.3"
dotenv = "0.15.0"
warp = "0.3.6"
reqwest-eventsource = "0.4.0"
reqwest = { version = "0.11.18", features = ["rustls-tls-webpki-roots", "cookies", "json"], default-features = true }
semver = { version = "1", features = ["serde"] }
tokio = { version = "1.29.1", features = ["macros", "process", "rt", "rt-multi-thread", "io-std", "io-util", "sync", "fs"] }
qdrant-client = { version = "1.3.0", default-features = false }
ort = { git = "https://github.com/bloopai/ort", branch = "env-builder-telemetry" }
ndarray = "0.15"
tokenizers = { version = "0.13.3", default-features = false, features = ["progressbar", "cli", "onig", "esaxx_fast"] }
async-stream = "0.3.5"
tokio-stream = "0.1.14"
tantivy = { version = "0.21.0", features = ["mmap"] }
strsim = "0.10.0"
log = "0.4.21"
env_logger = "0.11.2"
[build-dependencies]
serde = {version = "1.0.166", features = ["derive"]}
serde_json = "1.0.100"
phf_codegen = "0.11.1"
serde_yaml = "0.9.22"
phf = "0.11.1"
reqwest = { version = "0.11.18", default-features = false, features = ["blocking", "json"] }


