[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
# Add any other dependencies required for `RepoRef` or other types used.
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0.71"
log = "0.4.14"
