[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.syntect]
version = "5.0.0"
default-features = false
features = ["parsing", "regex-onig", "plist-load"]



[dependencies]
ai-gateway = { path = "../ai-gateway"}

tokio = { version = "1.34.0", features = ["rt", "time", "macros", "signal"] }
async-trait = "0.1.74"
bitflags = "2.5.0"
lazy_static = "1.4.0"
rustc-hash = "1.1.0"
base64 = "0.22.0"
parking_lot = "0.12.1"
fancy-regex = "0.13.0"
bstr = "1.8.0"
mime_guess = "2.0.4"
unicode-width = "0.1.11"
sha2 = "0.10.8"
dirs = "5.0.0"
ansi_colours = "1.2.2"
crossterm = { version = "0.27.0", features = ["use-dev-tty"] }
textwrap = "0.16.0"
is-terminal = "0.4.9"
nu-ansi-term = "0.50.0"

serde = { version = "1.0", features = ["derive"] }
# Add any other dependencies required for `RepoRef` or other types used.
serde_json = "1.0"
serde_yaml = "0.9.34"
reqwest = { version = "0.12.2", features = [
    "json",
    "multipart",
    "socks",
    "rustls-tls",
    "rustls-tls-native-roots",
] }
anyhow = "1.0.71"
log = "0.4.14"
axum = { version = "0.6.18", features = ["http2", "headers"] }
reqwest-eventsource = "0.6.0"
tracing = "0.1.37"
tiktoken-rs = "0.4.5"
semver = { version = "1", features = ["serde"] }
thiserror = "1.0.41"
md5 = "0.7.0"
once_cell = "1.8.0"
tree-sitter = "0.20.10"
tree-sitter-c = "0.20.3"
tree-sitter-c-sharp = "0.20.0"
tree-sitter-cpp = "0.20.0"
tree-sitter-go = { git = "https://github.com/tree-sitter/tree-sitter-go.git", rev = "05900faa3cdb5d2d8c8bd5e77ee698487e0a8611" }
tree-sitter-java = "0.20.0"
tree-sitter-javascript = "0.20.0"
tree-sitter-php = { git = "https://github.com/tree-sitter/tree-sitter-php.git", rev = "d43130fd1525301e9826f420c5393a4d169819fc" }
tree-sitter-python = "0.20.2"
tree-sitter-r = "0.19.5"
tree-sitter-ruby = "0.20.0"
tree-sitter-rust = "0.20.3"
tree-sitter-typescript = "0.20.2"
petgraph = { version = "0.6.3", default-features = false, features = [
    "serde-1",
] }
expect-test = "1.4.1"
bincode = "1.3.3"
redis = "0.25.3"
uuid = { version = "1.0", features = ["v4"] }
ort = "2.0.0-rc.1"
tokenizers = "0.19.1"
ndarray = "0.15"
