[package]
name = "coordinator"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

anyhow = "1.0.71"
dotenv = "0.15.0"
log = "0.4.21"
env_logger = "0.11.2"
once_cell = "1.8.0"
tokio-stream = "0.1.14"
tokio = { version = "1.29.1", features = [
    "macros",
    "process",
    "rt",
    "rt-multi-thread",
    "io-std",
    "io-util",
    "sync",
    "fs",
] }
petgraph = { version = "0.6.3", default-features = false, features = ["serde-1"] }
warp = "0.3.6"
reqwest-eventsource = "0.4.0"
reqwest = { version = "0.11.18", features = [
    "rustls-tls-webpki-roots",
    "cookies",
    "json",
], default-features = true }
serde_json = "1.0.100"
serde = { version = "1.0.166", features = ["derive"] }
futures = "0.3.28"
uuid = "1.0"
