[package]
name = "ingestion"
version = "0.1.0"
edition = "2021"

[features]
stack_graph = [
    "stack-graphs/serde",
    "stack-graphs/visualization",
    "stack-graphs/storage",
    "tree-sitter-stack-graphs/cli",
    "tree-sitter-stack-graphs-python/cli",
]
cli = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
git2 = "0.13.24"
regex = "1.5.4"
once_cell = "1.8.0"
smallvec = "1.7.0"
blake3 = "1.4.0"
anyhow = "1.0.44"
hyperpolyglot = { git = "https://github.com/bloopai/hyperpolyglot.git", rev = "1bc3c2648c5c9a0a6ace85d2585f408b479f3190" }

serde = "1.0.166"
serde_json = "1.0.100"
tracing = "0.1.37"
tokenizers = "0.13.3"
clap = { version = "3", features = ["env"] }
bincode = "1.3.3"
ndarray = "0.15"
ort = { git = "https://github.com/bloopai/ort", branch = "env-builder-telemetry" }
qdrant-client = { version = "=1.6.0", default-features = false }
rayon = "1.7.0"
thiserror-impl = "1.0.44"
thiserror = "1.0.44"
futures = "0.3.28"
uuid = { version = "1.4.0", features = ["v4", "fast-rng", "serde"] }
serde_yaml = "0.8"
reqwest = "0.11"
itertools = "0.10.1"
env_logger = "0.10.0"
log = "0.4.21"
md5 = "0.7.0"
stack-graphs = { features = ["serde", "visualization", "storage"] }
tree-sitter-stack-graphs = { features = ["cli"] }
tree-sitter-stack-graphs-python = { features = ["cli"] }
dirs = "5.0.1"
dotenv = "0.15.0"
warp = "0.3"
lazy_static = "1.4.0"
