[package]
name = "search"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.33", features = ["macros", "process", "rt", "rt-multi-thread", "io-std", "io-util", "sync", "fs"] }
warp = "0.3.6"
reqwest-eventsource = "0.5.0"
reqwest = { version = "0.11.18", features = ["rustls-tls-webpki-roots", "cookies", "json"], default-features = true }
qdrant-client = { version = "1.3.0", default-features = false }
ort = { git = "https://github.com/bloopai/ort", branch = "env-builder-telemetry" }
tokenizers = { version = "0.13.3", default-features = false, features = ["progressbar", "cli", "onig", "esaxx_fast"] }
anyhow = "1.0.71"
thiserror = "1.0.41"
strsim = "0.10.0"
hashbrown = "0.14.1"
ndarray = "0.15"
tracing = "0.1.37"
regex = "1.9.1"
env_logger = "0.11.2"
petgraph = { version = "0.6.3", default-features = false, features = ["serde-1"] }
expect-test = "1.4.1"
tree-sitter = "0.20.10"
bincode = "1.3.3"
lazy_static = "1.4"
dotenv = "0.15"
md5 = "0.7.0"
log = "0.4.21"
